# Urbanclear

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fast  Dockerfile.minimal  IMPLEMENTATION_STATUS.md  Makefile  ORGANIZATION_IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  cleanup_summary.md  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-core.txt  requirements-minimal.txt  requirements.txt  run_api.py  setup.py  start_api.py  test_real_models.py
.github/workflows/: ci-cd.yml
config/: bandit.yaml  config.example.yaml  mypy.ini  pytest.ini
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: IncidentsList.tsx  Layout.tsx  StatsCard.tsx
dashboard/src/components/charts/: TrafficChart.tsx
dashboard/src/components/maps/: RealtimeMap.tsx
dashboard/src/pages/: Analytics.tsx  Dashboard.tsx  Incidents.tsx  Settings.tsx  Traffic.tsx
dashboard/src/stores/: trafficStore.ts  websocketStore.ts
dashboard/src/styles/: index.css
dashboard/src/types/: index.ts
dashboard/src/utils/: api.ts
data/raw/: README.md
data/sample/: traffic_data.csv
docker/grafana/dashboards/: README.md  enhanced-traffic-overview.json  geographic-traffic-map.json  incident-management-dashboard.json  overview-dashboard.json  predictive-analytics-dashboard.json  predictive-analytics-enhanced.json  real-time-traffic-dashboard.json  system-performance-dashboard.json  traffic-flow-dashboard.json
docker/mongodb/: init.js
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: .gitignore  CODE_QUALITY_REPORT.md  FIXES_APPLIED.md  IMPROVEMENTS.md  LOCAL_CI_CD_TESTING.md  PROJECT_ROADMAP.md
docs/archived/: FINAL_CLEANUP_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  PROJECT_CLEANUP_SUMMARY.md  VENV_GUIDE.md
docs/development/: DEPENDENCY_INSTALLATION_GUIDE.md  PYTHON_ENVIRONMENT_SETUP.md  PYTHON_VERSION_FIX.md  PYTHON_VERSION_VERIFICATION.md  TYPE_CHECKING_GUIDE.md
docs/guides/: FREE_BUILD_AND_SECURITY.md  LEARNING_AND_DEMO.md  MINIMAL_STACK.md  QUICKSTART.md  local-ci-cd-testing.md
docs/security/: SECURITY_AUDIT.md  SECURITY_FIXES.md  SECURITY_FIXES_APPLIED.md  SECURITY_SCAN_RESOLUTION.md
examples/: README.md  demo_real_data.py
infrastructure/kafka/: enhanced_kafka_producer.py  kafka_producer.py
infrastructure/spark/: enhanced_traffic_processor.py  traffic_data_processor.py
logs/: README.md
models/: README.md
scripts/: README.md  database_optimization.py  dev_setup.py  fast-docker-build.sh  health_check.py  init_database.py  run-performance-tests.sh  setup.py  setup_dashboards.py  start_simple.py  start_urbanclear.py  test-ci-cd-locally.sh  test-local-ci.sh  test_api.py  test_mongodb_integration.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  models.py  mongodb_endpoints.py  notification_system.py  security.py  socketio_handler.py  websocket_handler.py
src/core/: __init__.py  config.py
src/data/: __init__.py  geoapify_client.py  logging_service.py  metrics_publisher.py  mock_data_generator.py  mongodb_client.py  openrouteservice_client.py  osm_client.py  real_data_config.py  real_data_service.py  traffic_service.py
src/models/: __init__.py  enhanced_ml_pipeline.py  enhanced_route_optimizer.py  enhanced_traffic_prediction.py  incident_detection.py  ml_trainer.py  optimization.py  prediction.py  simple_ml_trainer.py
src/monitoring/: advanced_monitoring.py
src/visualization/: web_dashboard.py
tests/: README.md  conftest.py  test_api.py  test_api_basic.py
tests/api/: test_endpoints.py
tests/integration/: test_api_integration.py  test_database_integration.py
tests/unit/: test_api_models.py  test_ci_smoke.py  test_traffic_service.py
